--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -1,11 +1,5 @@
 spring:
   application:
-    name: discovery
-
-server:
-  port: 8761
-
-eureka:
-  client:
-    fetch-registry: false
-    register-with-eureka: false
+    name: discovery-service
+  config:
+    import: "optional:configserver:${CONFIG_SERVER:http://localhost:8088}"
