--- a/organization-service/src/main/resources/application.yml
+++ b/organization-service/src/main/resources/application.yml
@@ -1,16 +1,8 @@
-server:
-  port: 0
 spring:
-  cloud:
-    config:
-      enabled: false
   application:
-    name: ORGANIZATION_SERVICE
-
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+    name: organization-service
+  config:
+    import: "optional:configserver:${CONFIG_SERVER:http://localhost:8088}"
+springdoc:
+  version: '@springdoc.version@'
 
